add constant for "Puzzle ITC" remove logic from queries and optimize thm by using derived queries. Optimize functions OverviewService.getOverview() and TeamService.getAllTeams()